# agentic-cli

./: .gitignore  DEVELOPMENT.md  PRD.md  README.md  pyproject.toml
docs/: ANALYSIS_INSIGHTS.md  CLAUDE.md  ENTERPRISE_FEATURES.md  SDD.md
src/agentic/: __init__.py  cli.py  config.py  generator.py  llm.py  sandbox.py  tasks.py
tasks/builtin/: fastapi_route.yaml  python_function.yaml  readme.yaml
tests/: __init__.py  conftest.py
tests/unit/: test_cli.py  test_config.py  test_generator.py  test_llm.py  test_sandbox.py  test_task_templates.py
